--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "kanata-button",
-  "version": "1.3.1",
-  "description": "Voice Button for Amane Kanata",
-  "author": "Lonely_ion",
+  "name": "myemie-button",
+  "version": "0.2.0",
+  "description": "Voice Button for Moye MieMieMie",
+  "author": "Cyame",
   "private": true,
   "scripts": {
     "dev": "nuxt",
